Added angular.js caller

--- a/conceptual_overview/index.html
+++ b/conceptual_overview/index.html
@@ -19,5 +19,7 @@
       <b>Total: </b>{{qty * cost | currency}}
     </div>
   </div>
+
+  <script src="js/angular1.3.0.min.js"></script>
 </body>
 </html>
