--- a/conceptual_overview/index.html
+++ b/conceptual_overview/index.html
@@ -5,21 +5,28 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Data Binding</title>
   <link rel="stylesheet" href="">
+  <script src="js/angular1.3.0.min.js"></script>
+  <script src="js/invoice1.js"></script>
 </head>
 <body>
-  <div ng-app ng-init="qty=1;cost=2">
+  <div ng-app="invoice1" ng-controller="InvoiceController as invoice">
     <b>Invoice:</b>
     <div>
-      Quantity: <input type="number" ng-model="gty">
+      Quantity: <input type="number" ng-model="invoice.qty" required >
     </div>
     <div>
-      Costs: <input type="number" ng-model="cost">
+      Costs: <input type="number" ng-model="invoice.cost" required >
+      <select ng-model="invoice.inCurr">
+        <option ng-repeat="c in invoice.currencies">{{c}}</option>
+      </select>
     </div>
     <div>
-      <b>Total: </b>{{qty * cost | currency}}
+      <b>Total:</b>
+      <span ng-repeat="c in invoice.currencies">
+        {{invoice.total(c) | currency:c}}
+      </span>
+      <button class="btn" ng-click="invoice.pay()">Pay</button>
     </div>
   </div>
-
-  <script src="js/angular1.3.0.min.js"></script>
 </body>
 </html>
