--- a/conceptual_overview/index.html
+++ b/conceptual_overview/index.html
@@ -9,13 +9,13 @@
   <script src="js/invoice1.js"></script>
 </head>
 <body>
-  <div ng-app="invoice1" ng-controller="InvoiceController as invoice">
+  <div ng-app="invoice2" ng-controller="InvoiceController as invoice">
     <b>Invoice:</b>
     <div>
-      Quantity: <input type="number" ng-model="invoice.qty" required >
+      Quantity: <input type="number" min="0" ng-model="invoice.qty" required >
     </div>
     <div>
-      Costs: <input type="number" ng-model="invoice.cost" required >
+      Costs: <input type="number" min="0" ng-model="invoice.cost" required >
       <select ng-model="invoice.inCurr">
         <option ng-repeat="c in invoice.currencies">{{c}}</option>
       </select>
