--- a/Part2.taking_it_for_a_spin.html
+++ b/Part2.taking_it_for_a_spin.html
@@ -14,6 +14,7 @@
     <div class="{{data.message}}">
       Wrap me with foundation component (Ex: add the word: 'label')
     </div>
+    <h3><a target="_blank" href="https://thinkster.io/egghead/binding/">See more here..</a></h3>
   </div>
   <script src="js/angular1.3.0.min.js"></script>
 </body>
