--- a/Part2.taking_it_for_a_spin.html
+++ b/Part2.taking_it_for_a_spin.html
@@ -8,24 +8,19 @@
 </head>
 <body>
   <div ng-app="">
+    <input type="text" ng-model="data.message"> <!-- NO Controller -->
+    <h1>{{data.message}}</h1>
+
     <div ng-controller="FirstController"> <!-- This div will have the SCOPE of THAT controller -->
       <input type="text" ng-model="data.message">
-      <!-- <h1>{{data.message}}</h1> -->
-      <h1>{{data.message + " world"}}</h1>
-      <div class="{{data.message}}">
-        Wrap me with foundation component (Ex: add the word: 'label')
-      </div>
-      <h3><a target="_blank" href="https://thinkster.io/egghead/binding/">See more here..</a></h3>
+      <h1>{{data.message}}</h1>
     </div>
+
     <div ng-controller="SecondController"> <!-- This div will have the SCOPE of THAT controller -->
       <input type="text" ng-model="data.message">
-      <!-- <h1>{{data.message}}</h1> -->
-      <h1>{{data.message + " world"}}</h1>
-      <div class="{{data.message}}">
-        Wrap me with foundation component (Ex: add the word: 'label')
-      </div>
-      <h3><a target="_blank" href="https://thinkster.io/egghead/binding/">See more here..</a></h3>
+      <h1>{{data.message}}</h1>
     </div>
+
   </div>
   <script src="js/main.js"></script>
   <script src="js/angular1.2.0.min.js"></script>
