--- a/Part2.taking_it_for_a_spin.html
+++ b/Part2.taking_it_for_a_spin.html
@@ -16,7 +16,7 @@
 
     <div ng-controller="SecondController"> <!-- This div will have the SCOPE of THAT controller -->
       <input type="text" ng-model="data.message">
-      <h1>{{data.message}}</h1>
+      <h1>{{reversedMessage(data.message)}}</h1>
     </div>
 
   </div>
