--- a/hiding_and_showing.html
+++ b/hiding_and_showing.html
@@ -13,7 +13,7 @@
     <ul ng-show="menuState">
       <li ng-click="stun()">Stun</li>
       <li ng-click="disintegrate()">Disintegrate</li>
-      <li ng-click="erase()">Erase from history</li>
+      <li ng-if="!erased" ng-click="erase()">Erase from history</li>
     </ul>
   </div>
 
